# ModuleUnit_DesignAndTest

./: .env.auto.example  .env.bak  .env.example  .env.local.example  .gitignore  .gitlab-ci-full.yml  .gitlab-ci.yml  CODE_OF_CONDUCT.md  COLOR_UPDATE_SUMMARY.md  CONTRIBUTING.md  COVERAGE_DOCUMENTATION.md  COVERAGE_IMPLEMENTATION_COMPLETE.md  COVERAGE_REPORTS_GUIDE.md  COVERAGE_SUMMARY.md  Dockerfile  Dockerfile.backup  FINAL_IMPLEMENTATION.md  GITLAB_CI.md  GREY_SHADES_PALETTE.md  HOW_TO_FIND_REPORTS.md  IMPLEMENTATION_SUMMARY.md  JUNIT_FIX.md  LICENSE  MUTED_EARTH_TONES_UPDATE.md  PROJECT_STATUS.md  README.md  SCRIPTS.md  Stop.sh  UpdateMainAndRestart.sh  WHERE_TO_FIND_REPORTS.md  docker-compose.yml  launch.bat  launch.sh  main.py  requirements.txt.backup  run.bat  run_tests.bat  run_tests.sh  sample-test-report.html  setup.bat  (+5 more)
python-sidecar/: .coverage.Dell7640_Afe.pid2172.X90TCBfx  .env.example  pyproject.toml  run_eps_flowchart_diagnostic.bat  test_output.txt  test_output_unit.txt
python-sidecar/data/: mudtool.sqlite-journal
python-sidecar/knowledge/: autosar_catalog.json
python-sidecar/prompts/: activity_detailed.yaml.disabled  activity_diagram.yaml  activity_diagram_generic.yaml  class_diagram.yaml  class_diagram_generic.yaml  component_diagram.yaml  component_diagram_generic.yaml  elaboration.yaml  sequence_diagram.yaml  sequence_diagram_generic.yaml  state_machine_diagram.yaml  state_machine_diagram_generic.yaml
python-sidecar/tests/: test_activity_pipeline.py  test_elaborator_enhanced.py
python-sidecar/tools/: csv_to_reference_json.py  (+1 more)
(+273 files in other folders)
