[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mudtool"
version = "0.1.0"
description = "AI-Assisted AUTOSAR Module & Unit Design Tool - Python Sidecar"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "MUD Tool Team"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openpyxl>=3.1.2",
    "anthropic>=0.40.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.19.0",
    "lxml>=5.1.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
local-llm = [
    "llama-cpp-python>=0.2.40",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
mudtool-server = "mudtool.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
